# exml

./: .gitignore  Cargo.toml  LICENSE  README.md  callgrind.out.872489
.cargo/: config.toml
resources/: generate-test-code.ts  get-dom-test-suite.ts
result/errors/: 754947.xml.err
result/schematron/: zvon10_0.err  zvon10_1.err  zvon11_1.err  zvon11_2.err  zvon12_0.err  zvon12_2.err  zvon13_0.err  zvon13_1.err  zvon14_0.err  zvon15_0.err  zvon1_0.err  zvon1_1.err  zvon2_1.err  zvon2_2.err  zvon3_0.err  zvon4_0.err  zvon4_1.err  zvon5_0.err  zvon5_1.err  zvon5_2.err  zvon6_0.err  zvon6_1.err  zvon6_2.err  zvon7_0.err  zvon7_1.err  zvon7_2.err  zvon7_3.err  zvon7_4.err  zvon8_0.err  zvon8_1.err  zvon8_2.err  zvon9_1.err  zvon9_2.err
src/: buf.rs  c14n.rs  debug_xml.rs  dict.rs  encoding.rs  error.rs  globals.rs  hash.rs  lib.rs  list.rs  nanohttp.rs  pattern.rs  save.rs  schematron.rs  test_util.rs  uri.rs  valid.rs  writer.rs  xinclude.rs
src/dict/: libxml_api.rs  mod.rs
src/dom/: attlistdecl.rs  attr.rs  character_data.rs  document.rs  document_fragment.rs  document_type.rs  dom_configuration.rs  dom_error.rs  dom_implementation.rs  element.rs  elementdecl.rs  entity.rs  entity_reference.rs  mod.rs  name_list.rs  named_node_map.rs  node.rs  node_list.rs  notation.rs  pi.rs  user_data.rs
src/hash/: libxml_api.rs  mod.rs
src/html/: mod.rs  parser.rs  taginfo.rs  tree.rs
src/io/: input.rs  mod.rs  output.rs
src/libxml/: c14n.rs  catalog.rs  chvalid.rs  debug_xml.rs  dict.rs  encoding.rs  entities.rs  globals.rs  hash.rs  htmlparser.rs  htmltree.rs  list.rs  mod.rs  nanoftp.rs  nanohttp.rs  parser.rs  parser_internals.rs  pattern.rs  relaxng.rs  sax.rs  sax2.rs  schemas_internals.rs  schematron.rs  threads.rs  tree.rs  uri.rs  valid.rs  xinclude.rs  xlink.rs  xml_io.rs  xmlautomata.rs  xmlerror.rs  xmlmemory.rs  xmlmodule.rs  xmlreader.rs  xmlregexp.rs  xmlsave.rs  xmlschemas.rs  xmlschemastypes.rs  xmlstring.rs  (+6 more)
src/list/: libxml_api.rs  mod.rs
src/parser/: context.rs  error.rs  input.rs  legacy.rs  loader.rs  mod.rs  node_info.rs  parse.rs  push.rs  qname.rs  sax.rs  valid.rs
src/parser/parse/: attribute.rs  cdata.rs  comment.rs  dtd.rs  element.rs  entity.rs  literal.rs  mod.rs  names.rs  pi.rs  reference.rs  xmldecl.rs
src/private/: buf.rs  enc.rs  entities.rs  error.rs  mod.rs  parser.rs  save.rs  threads.rs
src/relaxng/: define.rs  error.rs  mod.rs  parser.rs  type_library.rs  valid.rs
src/tree/: attribute.rs  document.rs  dom.rs  dom_wrapper.rs  dump.rs  entities.rs  generic.rs  id.rs  mod.rs  namespace.rs  node.rs
src/tree/dtd/: attribute.rs  element.rs  enumeration.rs  mod.rs  notation.rs
src/xmlschemas/: context.rs  dump.rs  error.rs  item_list.rs  items.rs  mod.rs  parse.rs  schema.rs  valid.rs
src/xmlschemastypes/: mod.rs  parse.rs  primitives.rs
src/xpath/: compile.rs  context.rs  dump.rs  evaluate.rs  functions.rs  internals.rs  mod.rs  node_set.rs  object.rs
tests/: dom_test_suite.rs  runsuite.rs  runtest.rs  runxmlconf.rs  test_threads.rs  testchar.rs  testdict.rs  testlimits.rs  testrecurse.rs
