[package]
name = "exml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.20", features = ["derive"] }
const_format = { version = "0.2.32" }
encoding_rs = "0.8.34"
libc = "0.2.155"
rand = "0.8.5"
url = "2.5.2"

[features]
default = [
    "c14n",
    "catalog",
    "ftp",
    "html",
    "http",
    "sax1",
    "schema",
    "schematron",
    "xinclude",
    "xpath",
    "xpointer",
    "libxml_automata",
    "libxml_debug",
    "libxml_expr",
    "libxml_iso8859x",
    "libxml_modules",
    "libxml_output",
    "libxml_pattern",
    "libxml_push",
    "libxml_reader",
    "libxml_regexp",
    "libxml_tree",
    "libxml_unicode",
    "libxml_valid",
    "libxml_writer",
]
c14n = []
catalog = []
ftp = []
html = []
http = []
sax1 = []
schema = []
schematron = []
xinclude = []
xpath = []
xpointer = []
libxml_automata = []
libxml_debug = []
libxml_expr = []
libxml_iso8859x = []
libxml_legacy = []
libxml_modules = []
libxml_output = []
libxml_pattern = []
libxml_push = []
libxml_reader = []
libxml_regexp = []
libxml_tree = []
libxml_unicode = []
libxml_valid = []
libxml_writer = []
libxml_xptr_locs = []

[[test]]
name = "runxmlconf"
required-features = ["xpath"]

[[test]]
name = "runsuite"
required-features = ["schema", "xpath"]

[[test]]
name = "runtest"
required-features = ["libxml_output"]

[[test]]
name = "testchar"

[[test]]
name = "testdict"

[[test]]
name = "testlimits"

[[test]]
name = "testrecurse"

[[test]]
name = "test_threads"
required-features = ["catalog"]

[[bin]]
name = "xmllint"
path = "src/bin/xmllint.rs"

[dev-dependencies]
glob = "0.3.1"
