[package]
name = "exml"
version = "0.4.0"
edition = "2024"
authors = ["tayu0110"]
license = "MIT"
repository = "https://github.com/tayu0110/exml.git"
description = "Pure Rust XML library based on libxml2"
keywords = ["xml", "xpath", "schema", "relaxng", "dtd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
const_format = { version = "0.2.34" }
encoding_rs = "0.8.35"
libc = "0.2.170"
rand = "0.9.0"
url = "2.5.4"

[features]
default = [
    "c14n",
    "catalog",
    "html",
    "http",
    "sax1",
    "schema",
    "schematron",
    "xinclude",
    "xpath",
    "xpointer",
    "libxml_automata",
    "libxml_debug",
    "libxml_expr",
    "libxml_iso8859x",
    "libxml_output",
    "libxml_pattern",
    "libxml_push",
    "libxml_reader",
    "libxml_regexp",
    "libxml_tree",
    "libxml_unicode",
    "libxml_valid",
    "libxml_writer",
    "libxml_xptr_locs",
]
c14n = []
catalog = []
html = []
http = []
sax1 = []
schema = []
schematron = []
xinclude = []
xpath = []
xpointer = []
libxml_automata = []
libxml_debug = []
libxml_expr = []
libxml_iso8859x = []
libxml_output = []
libxml_pattern = []
libxml_push = []
libxml_reader = []
libxml_regexp = []
libxml_tree = []
libxml_unicode = []
libxml_valid = []
libxml_writer = []
libxml_xptr_locs = []

[[test]]
name = "runxmlconf"
required-features = ["xpath"]

[[test]]
name = "runsuite"
required-features = ["schema", "xpath"]

[[test]]
name = "runtest"
required-features = ["libxml_output"]


[[test]]
name = "testdict"

[[test]]
name = "testlimits"

[[test]]
name = "testrecurse"

[[test]]
name = "test_threads"
required-features = ["catalog"]

[[bin]]
name = "exmllint"
path = "src/bin/exmllint.rs"

[dev-dependencies]
glob = "0.3.1"
